--- a/source/index.html
+++ b/source/index.html
@@ -2,16 +2,52 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Название проекта</title>
+    <title>Drink2go</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preload" href="#" type="font/woff2" as="font">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header">Шапка</header>
+    <header class="header">
+      <div class="">
+        <img src="" alt="Логотип компании" width="100" height="100">
+        <span>Интернет-магазин кофейных напитков</span>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Каталог</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Доставка</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">О нас</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="">
+        <ul class="">
+          <li class="">
+            <a href="#" class="social__link">
+              <span>Войти</span>
+            </a>
+          </li>
+          <li class="">
+            <a href="#" class="social__link">
+              <span>Корзина</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <main>
       <h1>Страница для старта</h1>
     </main>
+    <footer class="footer">Подвал</footer>
   </body>
 </html>
