added style for section

--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,9 @@
     <link rel="preload" href="./fonts/Montserrat-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="./fonts/Montserrat-SemiBold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="./fonts/Montserrat-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
@@ -64,30 +67,32 @@
     </header>
     <main class="page__main">
       <section class="slider">
-        <div class="slider__wrapper slider__wrapper--espresso">
+        <div class="slider__wrapper slider__wrapper--white">
           <button class="slider__button-prev" type="button">
             <span class="visually-hidden">Предыдущий слайд</span>
           </button>
           <ul class="slider__list">
             <li class="slider__item slider slider__item--active">
               <picture class="slider__picture">
-                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.wep 1x, images/slider_espresso_desktop@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.webp 1x, images/slider_espresso_tablet@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" srcset="images/slider_espresso_mobile@1x.webp 1x, images/slider_espresso_mobile@2x.webp 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.png 1x, images/slider_espresso_desktop@2x.png 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.png 1x, images/slider_espresso_tablet@2x.png 2x" width="280" height="280">
-                <img class="slider__picture-img" src="images/slider_espresso_mobile@1x.png" srcset="images/slider_espresso_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_white_desktop@1x.wep 1x, images/slider_white_desktop@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.webp 1x, images/slider_white_tablet@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" srcset="./images/slider_white_mobile@1x.webp 1x, images/slider_white_mobile@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_white_desktop@1x.png 1x, images/slider_white_desktop@2x.png 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.png 1x, images/slider_white_tablet@2x.png 2x" width="280" height="280">
+                <img class="slider__picture-img" src="/images/slider_white_mobile@1x.png" srcset="images/slider_white_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
-              <p class="slider__label label">Новинка!</p>
-              <h3 class="slider__title">Декаф Флэт Уайт</h3>
-              <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-              <div class="slider__price">
-                <span class="slider__price-old">295₽</span>
-                <span class="slider__price-new">225₽</span>
-                <button class="slider__button button button--accent" type="button">Заказать</button>
+              <div class="">
+                <p class="slider__label label">Новинка!</p>
+                <h3 class="slider__title">Декаф Флэт Уайт</h3>
+                <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                <div class="slider__price">
+                  <span class="slider__price-old">295₽</span>
+                  <span class="slider__price-new">225₽</span>
+                  <button class="slider__button button button--accent" type="button">Заказать</button>
+                </div>
               </div>
             </li>
-            <!-- <li class="slider__item slider slider__item--active">
+            <!-- <li class="slider__item slider">
               <picture class="slider__picture">
                 <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_lavender_desktop@1x.wep 1x, images/slider_lavender_desktop@2x.webp 2x" width="280" height="280">
                 <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_lavender_tablet@1x.webp 1x, images/slider_lavender_tablet@2x.webp 2x" width="280" height="280">
@@ -104,23 +109,23 @@
                 <span class="slider__price-new">265₽</span>
                 <button class="slider__button" type="button">Заказать</button>
               </div>
-            </li>
-            <li class="slider__item slider slider__item--active">
+            </li> -->
+            <!-- <li class="slider__item slider slider__item--active">
               <picture class="slider__picture">
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_white_desktop@1x.wep 1x, images/slider_white_desktop@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.webp 1x, images/slider_white_tablet@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" srcset="./images/slider_white_mobile@1x.webp 1x, images/slider_white_mobile@2x.webp 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_white_desktop@1x.png 1x, images/slider_white_desktop@2x.png 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.png 1x, images/slider_white_tablet@2x.png 2x" width="280" height="280">
-                <img class="slider__picture-img" src="/images/slider_lavender_mobile@1x.png" srcset="images/slider_white_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.wep 1x, images/slider_espresso_desktop@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.webp 1x, images/slider_espresso_tablet@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" srcset="images/slider_espresso_mobile@1x.webp 1x, images/slider_espresso_mobile@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_espresso_desktop@1x.png 1x, images/slider_espresso_desktop@2x.png 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_espresso_tablet@1x.png 1x, images/slider_espresso_tablet@2x.png 2x" width="280" height="280">
+                <img class="slider__picture-img" src="images/slider_espresso_mobile@1x.png" srcset="images/slider_espresso_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
               <p class="slider__label label">Новинка!</p>
-              <h3 class="slider__title">Тройной Эспрессо</h3>
-              <p class="slider__description">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
+              <h3 class="slider__title">Декаф Флэт Уайт</h3>
+              <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
               <div class="slider__price">
-                <span class="slider__price-old">395₽</span>
-                <span class="slider__price-new">375₽</span>
-                <button class="slider__button" type="button">Заказать</button>
+                <span class="slider__price-old">295₽</span>
+                <span class="slider__price-new">225₽</span>
+                <button class="slider__button button button--accent" type="button">Заказать</button>
               </div>
             </li> -->
           </ul>
@@ -249,7 +254,7 @@
                 </div>
                 <ul class="cards__list">
                   <li class="cards__item">
-                    <div class="cards__box">
+                    <!-- <div class="cards__box"> -->
                       <picture class="cards__picture">
                         <source type="image/webp" srcset="images/cofee-can-white@1x.webp 1x, images/cofee-can-white@2x.webp 2x" width="130" height="188">
                         <img class="cards__picture-img" src="images/cofee-can-white@1x.png" srcset="images/cofee-can-white@2x.png 2x" width="130" height="188" alt="Банка кофе">
@@ -260,7 +265,7 @@
                         <span class="cards__box-price-new">225₽</span>
                         <button class="cards__box-button button button--accent" type="button">В корзину</button>
                       </div>
-                    </div>
+                    <!-- </div> -->
                   </li>
                   <li class="cards__item">
                     <div class="cards__box">
@@ -336,27 +341,29 @@
               </div>
             </div>
             <div class="catalog__pagination pagination">
-              <ol class="pagination__list">
-                <li class="pagination__item">
-                  <a class="pagination__link pagination__link--back button--light" href="#">
-                    <span class="visually-hidden">Назад</span>
-                  </a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link button--light" href="#">1</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link button button--light" href="#">2</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link button button--light" href="#">3</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link pagination__link--next button--light" href="#">
-                    <span class="visually-hidden">Вперёд</span>
-                  </a>
-                </li>
-              </ol>
+              <div class="container">
+                <ol class="pagination__list">
+                  <li class="pagination__item">
+                    <a class="pagination__link pagination__link--back button--light" href="#">
+                      <span>Назад</span>
+                    </a>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__link button--light" href="#">1</a>
+                  </li>
+                  <li class="pagination__item pagination__item--current">
+                    <a class="pagination__link button button--light" href="#">2</a>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__link button button--light" href="#">3</a>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__link pagination__link--next button--light" href="#">
+                      <span>Вперёд</span>
+                    </a>
+                  </li>
+                </ol>
+              </div>
             </div>
           </div>
         </div>
