added mobile style for slider

--- a/source/index.html
+++ b/source/index.html
@@ -67,9 +67,13 @@
     </header>
     <main class="page__main">
       <section class="slider">
+        <h2 class="visually-hidden">Кофе</h2>
         <div class="slider__wrapper slider__wrapper--white">
-          <button class="slider__button-prev" type="button">
+          <button class="slider__button-back" type="button">
             <span class="visually-hidden">Предыдущий слайд</span>
+          </button>
+          <button class="slider__button-next" type="button">
+            <span class="visually-hidden">Следующий слайд</span>
           </button>
           <ul class="slider__list">
             <li class="slider__item slider slider__item--active">
@@ -81,7 +85,7 @@
                 <source type="image/png" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.png 1x, images/slider_white_tablet@2x.png 2x" width="280" height="280">
                 <img class="slider__picture-img" src="/images/slider_white_mobile@1x.png" srcset="images/slider_white_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
-              <div class="">
+              <div class="slider__content-box">
                 <p class="slider__label label">Новинка!</p>
                 <h3 class="slider__title">Декаф Флэт Уайт</h3>
                 <p class="slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
@@ -129,9 +133,6 @@
               </div>
             </li> -->
           </ul>
-          <button class="slider__button-next" type="button">
-            <span class="visually-hidden">Следующий слайд</span>
-          </button>
           <div class="slider__pagination pagination-slider">
             <button class="slider__pagination-button" type="button">
               <span class="visually-hidden">Слайд 1</span>
