--- a/source/index.html
+++ b/source/index.html
@@ -15,60 +15,63 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__wrapper">
-          <a class="header__wrapper-link" href="#">
-            <div class="header__wrapper-logo logo">
-              <picture class="logo__picture">
-                <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
-                <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
-                <img class="logo__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Drink2Go">
-              </picture>
-              <span class="logo__label">Интернет-магазин кофейных напитков</span>
-            </div>
-          </a>
-          <nav class="header__wrapper-nav navigation navigation--closed">
-            <button class="navigation__toggle toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
-            <ul class="navigation__list">
-              <li class="navigation__list-item">
-                <a class="navigation__list-link navigation__list-link--current">Главная</a>
-              </li>
-              <li class="navigation__list-item">
-                <a href="#" class="navigation__list-link">Каталог</a>
-              </li>
-              <li class="navigation__list-item">
-                <a href="#" class="navigation__list-link">Доставка</a>
-              </li>
-              <li class="navigation__list-item">
-                <a href="#" class="navigation__list-link">О нас</a>
-              </li>
-            </ul>
-            <ul class="navigation__list-user navigation-user">
-              <li class="navigation-user__item">
-                <button type="button" class="button navigation-user__button">
-                  <svg width="16" height="16" aria-hidden="true">
-                    <use href="./icons/stack.svg#user"></use>
-                  </svg>
-                  <span>Войти</span>
-                </button>
-              </li>
-              <li class="navigation-user__item">
-                <button type="button" class="button navigation-user__button">
-                  <svg width="16" height="16" aria-hidden="true">
-                    <use href="./icons/stack.svg#basket"></use>
-                  </svg>
-                  <span>Корзина</span>
-                </button>
-              </li>
-            </ul>
-          </nav>
+      <div class="container">
+        <div class="header__wrapper">
+            <a class="header__wrapper-link" href="#">
+              <div class="header__wrapper-logo logo">
+                <picture class="logo__picture">
+                  <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
+                  <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
+                  <img class="logo__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Drink2Go">
+                </picture>
+                <span class="logo__label">Интернет-магазин кофейных напитков</span>
+              </div>
+            </a>
+            <nav class="header__wrapper-nav navigation navigation--closed">
+              <button class="navigation__toggle toggle" type="button">
+                <span class="visually-hidden">Открыть меню</span>
+              </button>
+              <ul class="navigation__list">
+                <li class="navigation__list-item">
+                  <a class="navigation__list-link navigation__list-link--current">Главная</a>
+                </li>
+                <li class="navigation__list-item">
+                  <a href="#" class="navigation__list-link">Каталог</a>
+                </li>
+                <li class="navigation__list-item">
+                  <a href="#" class="navigation__list-link">Доставка</a>
+                </li>
+                <li class="navigation__list-item">
+                  <a href="#" class="navigation__list-link">О нас</a>
+                </li>
+              </ul>
+              <ul class="navigation__list-user navigation-user">
+                <li class="navigation-user__item">
+                  <button type="button" class="button navigation-user__button">
+                    <svg width="16" height="16" aria-hidden="true">
+                      <use href="./icons/stack.svg#user"></use>
+                    </svg>
+                    <span>Войти</span>
+                  </button>
+                </li>
+                <li class="navigation-user__item">
+                  <button type="button" class="button navigation-user__button">
+                    <svg width="16" height="16" aria-hidden="true">
+                      <use href="./icons/stack.svg#basket"></use>
+                    </svg>
+                    <span>Корзина</span>
+                  </button>
+                </li>
+              </ul>
+            </nav>
+        </div>
       </div>
     </header>
     <main class="page__main">
-      <section class="slider">
+      <section class="hero hero--espresso">
+        <div class="container">
         <h2 class="visually-hidden">Кофе</h2>
-        <div class="slider__wrapper slider__wrapper--white">
+        <div class="hero__wrapper slider">
           <button class="slider__button-back" type="button">
             <span class="visually-hidden">Предыдущий слайд</span>
           </button>
@@ -78,12 +81,12 @@
           <ul class="slider__list">
             <li class="slider__item slider slider__item--active">
               <picture class="slider__picture">
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_white_desktop@1x.wep 1x, images/slider_white_desktop@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.webp 1x, images/slider_white_tablet@2x.webp 2x" width="280" height="280">
-                <source type="image/webp" srcset="./images/slider_white_mobile@1x.webp 1x, images/slider_white_mobile@2x.webp 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/slider_white_desktop@1x.png 1x, images/slider_white_desktop@2x.png 2x" width="280" height="280">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/slider_white_tablet@1x.png 1x, images/slider_white_tablet@2x.png 2x" width="280" height="280">
-                <img class="slider__picture-img" src="/images/slider_white_mobile@1x.png" srcset="images/slider_white_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/images/slider_white_desktop@1x.webp 1x, /images/slider_white_desktop@2x.webp 2x" width="600" height="600">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/images/slider_white_tablet@1x.webp 1x, /images/slider_white_tablet@2x.webp 2x" width="280" height="280">
+                <source type="image/webp" srcset="/images/slider_white_mobile@1x.webp 1x, /images/slider_white_mobile@2x.webp 2x" width="280" height="280">
+                <source type="image/png" media="(min-width: 1440px)" srcset="/images/slider_white_desktop@1x.png 1x, /images/slider_white_desktop@2x.png 2x" width="600" height="600">
+                <source type="image/png" media="(min-width: 768px)" srcset="/images/slider_white_tablet@1x.png 1x, /images/slider_white_tablet@2x.png 2x" width="280" height="280">
+                <img class="slider__picture-img" src="/images/slider_white_mobile@1x.png" srcset="/images/slider_white_mobile@2x.png 2x" width="280" height="280" alt="Банка кофе">
               </picture>
               <div class="slider__content-box">
                 <p class="slider__label label">Новинка!</p>
@@ -133,8 +136,8 @@
               </div>
             </li> -->
           </ul>
-          <div class="slider__pagination pagination-slider">
-            <button class="slider__pagination-button" type="button">
+          <div class="slider__pagination">
+            <button class="slider__pagination-button slider__pagination-button--active" type="button">
               <span class="visually-hidden">Слайд 1</span>
             </button>
             <button class="slider__pagination-button" type="button">
@@ -144,6 +147,7 @@
               <span class="visually-hidden">Слайд 3</span>
             </button>
           </div>
+        </div>
         </div>
       </section>
       <section class="features">
